--- a/tmux.conf
+++ b/tmux.conf
@@ -40,3 +40,13 @@ bind-key c kill-window
 
 # Start a terminal popup
 bind-key u run-shell '~/scripts/popuptmux.sh'
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Set the nord color scheme
+set -g @plugin "nordtheme/tmux"
+set -g status-left-length 40
+set -g status-right-length 80
+
+run '~/.tmux/plugins/tpm/tpm'
