add next window key bind

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,6 +35,9 @@ bind-key n new-window
 # Move to last window
 bind-key l last-window
 
+# Move to Next window
+bind-key k next-window
+
 # Close current window
 bind-key c kill-window
 
