More config updates

--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -171,6 +171,11 @@ windowrulev2 = noblur,title:^(.*Twitch.*)$
 windowrulev2 = idleinhibit always,title:^(.*Twitch.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Twitch.*)$
 
+# Do not dim teams
+windowrulev2 = noblur,title:^(.*Teams.*)$
+windowrulev2 = idleinhibit always,title:^(.*Teams.*)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Teams.*)$
+
 # Do not dim youtube
 windowrulev2 = noblur,title:^(.*YouTube.*)$
 windowrulev2 = idleinhibit always,title:^(.*YouTube.*)$
