Do not dim hearthstone

--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -181,6 +181,11 @@ windowrulev2 = noblur,title:^(.*YouTube.*)$
 windowrulev2 = idleinhibit always,title:^(.*YouTube.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*YouTube.*)$
 
+# Do not dim youtube
+windowrulev2 = noblur,title:^(.*Hearthstone.*)$
+windowrulev2 = idleinhibit always,title:^(.*Hearthstone.*)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Hearthstone.*)$
+
 # Put windows in the right workspaces
 windowrulev2 = workspace 1,class:^(firefox)$
 windowrulev2 = workspace 1,class:^(ffplay)$
