Update configs to handle being attached to a second monitor

--- a/config/hypr/laptop/hyprpaper.conf
+++ b/config/hypr/laptop/hyprpaper.conf
@@ -1,3 +1,5 @@
-preload = /home/gwagner/backgrounds/earth.jpg
-wallpaper = DP-4, /home/gwagner/backgrounds/earth.jpg
+preload = /home/gwagner/backgrounds/framework-exploded.jpg
+wallpaper = eDP-1, /home/gwagner/backgrounds/framework-exploded.jpg
+wallpaper = DP-3, /home/gwagner/backgrounds/framework-exploded.jpg
+wallpaper = DP-2, /home/gwagner/backgrounds/framework-exploded.jpg
 splash = false
