--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -43,6 +43,9 @@ exec-once=/usr/bin/alacritty
 # Lock screen after idle for 300s and turn monitors off after 330
 exec-once=/bin/bash --login -c "if pgrep -x swayidle; then killall swayidle; fi; sleep 1; swayidle -w timeout 300 'swaylock -f -C ~/.config/swaylock/config' timeout 330 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'"
 
+# Setup the cam loopback on desktop
+exec-once=~/.bin/process-watcher -config ~/.config/process-watcher-configs/cam-loopback.yaml
+
 # Load xmodmap
 exec-once = xmodmap ~/.Xmodmap
 
@@ -204,6 +207,11 @@ windowrulev2 = noinitialfocus, title:^(Picture\-in\-Picture)$
 windowrulev2 = idleinhibit always, title:^(Picture\-in\-Picture)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(Picture\-in\-Picture)$
 windowrulev2 = tile,title:^(Picture\-in\-Picture)$
+
+# Legend of Zelda
+windowrulev2 = size 1920 1080, title:^(The Legend of Zelda).*$
+windowrulev2 = nodim, title:^(The Legend Of Zelda)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(The Legend Of Zelda)$
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, alacritty
