--- a/config/process-watcher-configs/cam-loopback.yaml
+++ b/config/process-watcher-configs/cam-loopback.yaml
@@ -1,8 +1,5 @@
 ---
 commands:
   - name: FFMPEG Video Loopback
-    cmd: gst-launch-1.0 -v v4l2src device=/dev/video0 ! queue ! "video/x-h264,format=H264,width=1920,height=1080,framerate=30/1" ! vaapih264dec low-latency=true ! videoconvert ! v4l2sink device=/dev/video11 pulsesrc device=alsa_input.usb-Razer_Inc_Razer_Kiyo_Pro-02.analog-stereo  ! queue ! pulsesink device=GStreamerMic
+    cmd: gst-launch-1.0 v4l2src device=/dev/video0 ! tee name=t ! queue ! v4l2sink device=/dev/video10 t. ! queue ! v4l2sink device=/dev/video11
     showLog: true
-  - name: OBS Virtual Webcam
-    cmd: "com.obsproject.Studio --startvirtualcam --collection Standard --verbose --scene 'Fullscreen Webcam' --profile 'Cam-Loopback'"
-    sleep: 5
