--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -60,11 +60,15 @@ action = "Copy"
 key = "C"
 mods = "Command"
 
+#[[keyboard.bindings]]
+#chars = "\f"
+#key = "K"
+#mode = "~Vi|~Search"
+#mods = "Control"
 [[keyboard.bindings]]
-chars = "\f"
-key = "K"
-mode = "~Vi|~Search"
-mods = "Control"
+key = "f"
+mods = "Control|Shift"
+action = "ReceiveChar"
 
 [scrolling]
 "history" = 10000
