more small tweaks

--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -184,10 +184,11 @@ windowrulev2 = noblur,title:^(.*YouTube.*)$
 windowrulev2 = idleinhibit always,title:^(.*YouTube.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*YouTube.*)$
 
-# Do not dim youtube
+# Do not dim Hearthstone
 windowrulev2 = noblur,title:^(.*Hearthstone.*)$
 windowrulev2 = idleinhibit always,title:^(.*Hearthstone.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Hearthstone.*)$
+windowrulev2 = tile, title:^(.*Hearthstone.*)$
 
 # Put windows in the right workspaces
 windowrulev2 = workspace 1,class:^(firefox)$
