--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+
+
 # nvim requirement
 set-option -sg escape-time 10
 set-option -g focus-events on
@@ -10,9 +12,6 @@ set-option -sa terminal-features ',xterm-256color:RGB'
 
 set-option -g update-environment "HYPRLAND_INSTANCE_SIGNATURE \
                                   WAYLAND_DISPLAY"
-
-# reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
 
 # Setup vi style copy paste
 set -s set-clipboard external
@@ -48,8 +47,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Set the nord color scheme
-set -g @plugin "nordtheme/tmux"
+# set -g @plugin "nordtheme/tmux"
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @theme_variation 'night'
 set -g status-left-length 40
 set -g status-right-length 80
-
 run '~/.tmux/plugins/tpm/tpm'
