--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -43,9 +43,6 @@ exec-once=/usr/bin/alacritty
 # Lock screen after idle for 300s and turn monitors off after 330
 exec-once=/bin/bash --login -c "if pgrep -x swayidle; then killall swayidle; fi; sleep 1; swayidle -w timeout 300 'swaylock -f -C ~/.config/swaylock/config' timeout 330 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'"
 
-# Setup the cam loopback on desktop
-exec-once=~/.bin/process-watcher -config ~/.config/process-watcher-configs/cam-loopback.yaml
-
 # Load xmodmap
 exec-once = xmodmap ~/.Xmodmap
 
@@ -189,6 +186,12 @@ windowrulev2 = noblur,title:^(.*Hearthstone.*)$
 windowrulev2 = idleinhibit always,title:^(.*Hearthstone.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Hearthstone.*)$
 windowrulev2 = tile, title:^(.*Hearthstone.*)$
+
+# Do not dim timberborn
+windowrulev2 = noblur,title:^(.*Timberborn.*)$
+windowrulev2 = idleinhibit always,title:^(.*Timberborn.*)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Timberborn.*)$
+windowrulev2 = tile, title:^(.*Timberborn.*)$
 
 # Put windows in the right workspaces
 windowrulev2 = workspace 1,class:^(firefox)$
