update some styles

--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -222,7 +222,7 @@ bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod SHIFT, C, killactive
 bind = $mainMod $ctrlMod, Q, exit
 bind = $mainMod SHIFT, V, togglefloating 
-bind = $mainMod, P, exec, wofi --style ~/.config/wofi/style.css --show drun#combi --modi combi,calc
+bind = $mainMod, P, exec, wofi --style ~/.config/wofi/style.css --show drun#combi --modi combi,calc --allow-images
 
 # Float Firefox Window and Set size
 bind = $mainMod, o, setfloating, active
