update wallpaper to hyprpaper

--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -39,6 +39,7 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=/usr/bin/killall qpwgraph || /usr/bin/sleep 5 && /usr/bin/qpwgraph -a -m
 exec-once=/usr/bin/firefox
 exec-once=/usr/bin/alacritty
+exec-once=/usr/bin/hyprpaper
 
 # Lock screen after idle for 300s and turn monitors off after 330
 exec-once=/bin/bash --login -c "if pgrep -x swayidle; then killall swayidle; fi; sleep 1; swayidle -w timeout 300 'swaylock -f -C ~/.config/swaylock/config' timeout 330 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'"
