get keys working

--- a/config/hypr/laptop/hyprland.conf
+++ b/config/hypr/laptop/hyprland.conf
@@ -200,6 +200,15 @@ bind = $mainMod $ctrlMod, Q, exit
 bind = $mainMod SHIFT, V, togglefloating 
 bind = $mainMod, P, exec, wofi --style ~/.config/wofi/style.css --show drun#combi --modi combi,calc
 
+# Get audio keys working
+bindle = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindle = , XF86AudioLowerVolume, exec, wpctl set-volume -l 0 @DEFAULT_AUDIO_SINK@ 5%-
+bindlr = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+
+# Change Brightness
+binde = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+binde = ,XF86MonBrightnessUp, exec, brightnessctl s +10%
+
 # Float Firefox Window and Set size
 bind = $mainMod, o, setfloating, active
 bind = $mainMod, o, resizeactive, exact 1920 1080
