More small tweaks

--- a/config/hypr/laptop/hyprland.conf
+++ b/config/hypr/laptop/hyprland.conf
@@ -63,6 +63,7 @@ input {
     follow_mouse = 1
 
     touchpad {
+        tap-to-click = false
         natural_scroll = no
         clickfinger_behavior = true
     }
