small qol tweaks

--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -94,12 +94,13 @@ decoration {
         xray=true
         
     }
-    
-    drop_shadow = yes
-    shadow_range = 5
-    shadow_render_power = 3
-    inactive_opacity = .5  
-    col.shadow = rgba(1a1a1aee)
+
+    shadow {
+        enabled = true
+        range = 5
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
 }
 
 animations {
@@ -187,6 +188,10 @@ windowrulev2 = noblur,title:^(.*Hearthstone.*)$
 windowrulev2 = idleinhibit always,title:^(.*Hearthstone.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Hearthstone.*)$
 windowrulev2 = tile, title:^(.*Hearthstone.*)$
+
+# No idle or dim with discord
+windowrulev2 = idleinhibit always,title:^(.*Murder\sParty.*)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Murder\sParty.*)$
 
 # Do not dim timberborn
 windowrulev2 = noblur,title:^(.*Timberborn.*)$
