--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# do not allow key repeats
+set-option -g repeat-time 0
+
 # nvim requirement
 set-option -sg escape-time 10
 set-option -g focus-events on
@@ -16,10 +19,13 @@ set -s set-clipboard external
 setw -g mode-keys vi
 
 unbind '"'
-bind \\ split-window -h
+bind \\ split-window -h -c "#{pane_current_path}" 
 
 unbind '%'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"  
+
+# quick switch to the last pane
+bind-key -n C-s last-pane
 
 set -g mouse on
 
