--- a/config/hypr/laptop/hyprland.conf
+++ b/config/hypr/laptop/hyprland.conf
@@ -42,8 +42,7 @@ exec-once=/usr/bin/firefox
 exec-once=/usr/bin/alacritty
 exec-once=/usr/bin/hyprpaper
 
-# Lock screen after idle for 300s and turn monitors off after 330
-exec-once=/bin/bash --login -c "if pgrep -x swayidle; then killall swayidle; fi; sleep 1; swayidle -w timeout 300 'swaylock -f -C ~/.config/swaylock/config' timeout 330 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'"
+exec-once=/usr/bin/hypridle
 
 # Load xmodmap
 exec-once = xmodmap ~/.Xmodmap
