--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -40,9 +40,11 @@ exec-once=/usr/bin/killall qpwgraph || /usr/bin/sleep 5 && /usr/bin/qpwgraph -a 
 exec-once=/usr/bin/firefox
 exec-once=/usr/bin/alacritty
 exec-once=/usr/bin/hyprpaper
+exec-once=systemctl --user start hyprland-session.target
+exec-shutdown=systemctl --user stop hyprland-session.target
 
 # Lock screen after idle for 300s and turn monitors off after 330
-exec-once=/bin/bash --login -c "if pgrep -x swayidle; then killall swayidle; fi; sleep 1; swayidle -w timeout 300 'swaylock -f -C ~/.config/swaylock/config' timeout 330 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'"
+exec-once=/usr/bin/hypridle
 
 # Load xmodmap
 exec-once = xmodmap ~/.Xmodmap
