--- a/config/systemd/user/webcam-loopback.service
+++ b/config/systemd/user/webcam-loopback.service
@@ -5,7 +5,7 @@ After=xdg-desktop-portal.service
 
 [Service]
 Type=simple
-ExecStart=gst-launch-1.0 v4l2src device=/dev/v4l/by-id/usb-Razer_Inc_Razer_Kiyo_Pro-video-index0 ! tee name=wt ! queue ! v4l2sink device=/dev/video12 wt. ! queue ! v4l2sink device=/dev/video13
+ExecStart=gst-launch-1.0 -vv v4l2src device=/dev/v4l/by-id/usb-Razer_Inc_Razer_Kiyo_Pro-video-index0 ! image/jpeg,width=1920,height=1080,framerate=60/1 ! jpegdec ! videoflip method=vertical-flip ! videoconvert ! video/x-raw,format=I420,framerate=60/1 ! tee name=wt ! queue ! v4l2sink device=/dev/video12 wt. ! queue ! v4l2sink device=/dev/video13
 TimeoutSec=infinity
 Restart=always
 
