--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      mononoki Nerd Font Mono
-bold_font        mononoki Nerd Font Mono:style=Bold
-italic_font      mononoki Nerd Font Mono:style=Italic
-bold_italic_font mononoki Nerd Font Mono:style=BoldItalic
+font_family      JetBrainsMono NF
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -225,7 +225,7 @@ scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 #: should be at the top of the screen. Similarly CURSOR_LINE and
 #: CURSOR_COLUMN will be replaced by the current cursor position.
 
-scrollback_pager_history_size 0
+scrollback_pager_history_size 2048
 
 #: Separate scrollback history size, used only for browsing the
 #: scrollback buffer (in MB). This separate buffer is not available
@@ -298,7 +298,7 @@ url_excluded_characters
 #: URLs under the mouse cursor. By default, all characters legal in
 #: URLs are allowed.
 
-copy_on_select no
+copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, simply selecting text with the mouse will cause the text
@@ -308,7 +308,9 @@ copy_on_select no
 #: instead. Map a shortcut with the paste_from_buffer action to paste
 #: from this private buffer. For example::
 
-#:     map cmd+shift+v paste_from_buffer a1
+map alt+c        copy_to_clipboard
+map alt+v        paste_from_clipboard
+map shift+insert paste_from_clipboard
 
 #: Note that copying to the clipboard is a security risk, as all
 #: programs, including websites open in your browser can read the
@@ -466,12 +468,12 @@ sync_to_monitor yes
 
 #: Terminal bell {{{
 
-enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
 
-visual_bell_duration 0.0
+visual_bell_duration 0.2
 
 #: Visual bell duration. Flash the screen when a bell occurs for the
 #: specified number of seconds. Set to zero to disable.
@@ -553,7 +555,7 @@ single_window_margin_width -1
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 0
+window_padding_width 0 
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -738,7 +740,7 @@ background #000000
 
 #: The foreground and background colors
 
-background_opacity 0.7
+background_opacity 1
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -1469,3 +1471,4 @@ map kitty_mod+f6 debug_config
 
 #: }}}
 
+include tokyo-night.conf
