--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -38,7 +38,8 @@ exec-once=/usr/bin/openrgb --startminimized -p Default
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=/usr/bin/killall qpwgraph || /usr/bin/sleep 5 && /usr/bin/qpwgraph -a -m
 exec-once=/usr/bin/firefox
-exec-once=/usr/bin/alacritty
+#exec-once=/usr/bin/alacritty
+exec-once=/usr/bin/kitty
 exec-once=/usr/bin/hyprpaper
 exec-once=systemctl --user start hyprland-session.target
 exec-shutdown=systemctl --user stop hyprland-session.target
@@ -128,7 +129,8 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    always_center_master = true
+    orientation = center
+    slave_count_for_center_master = 0
     new_status = master
     mfact = 0.5
 
@@ -205,6 +207,7 @@ windowrulev2 = tile, title:^(.*Timberborn.*)$
 windowrulev2 = workspace 1,class:^(firefox)$
 windowrulev2 = workspace 1,class:^(ffplay)$
 windowrulev2 = workspace 2,class:^(Alacritty)$
+windowrulev2 = workspace 2,class:^(Kitty)$
 
 # Float qprompt
 windowrulev2 = workspace 1, class:^(com.cuperino.qprompt)$
@@ -226,7 +229,8 @@ windowrulev2 = nodim, title:^(The Legend Of Zelda)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(The Legend Of Zelda)$
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, alacritty
+#bind = $mainMod, RETURN, exec, alacritty
+bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod SHIFT, C, killactive
 bind = $mainMod $ctrlMod, Q, exit
 bind = $mainMod SHIFT, V, togglefloating 
