--- a/config/hypr/desktop/hyprlock.conf
+++ b/config/hypr/desktop/hyprlock.conf
@@ -37,7 +37,7 @@ input-field {
     fail_color = rgba(204, 34, 34, 0) # if authentication failed, changes outer_color and fail message color
     fail_text = $FAIL <b>($ATTEMPTS)</b> # can be set to empty
     fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
+    capslock_color = rgba(255, 0, 0, 0)
     numlock_color = -1
     bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
     invert_numlock = false # change color if numlock is off
@@ -46,17 +46,6 @@ input-field {
     halign = center
     valign = bottom
 }
-
-# label {
-#   monitor = 
-#   text = cmd[update:1000] echo "$(~/.config/Scripts/song-status)"
-#   color = rgba(242, 243, 244, 0.75)
-#   font_size = 14
-#   font_family = SF Pro Text
-#   position = 20, 512
-#   halign = left
-#   valign = center
-# }
 
 label {
   monitor =
@@ -68,28 +57,6 @@ label {
   halign = center
   valign = top
 }
-
-# label {
-#   monitor =
-#   text = cmd[update:1000] echo "$(~/.config/hypr/scripts/battery-status)‎"
-#   color = rgba(242, 243, 244, 0.75)
-#   font_size = 20
-#   font_family = SF Pro Text
-#   position = 280, -270
-#   halign = left
-#   valign = top
-# }
-
-# label {
-#   monitor =
-#   text = cmd[update:1000] echo "$(~/.config/Scripts/layout-status)‎"
-#   color = rgba(242, 243, 244, 0.75)
-#   font_size = 15
-#   font_family = SF Pro Text
-#   position = -150, 512
-#   halign = right
-#   valign = center
-# }
 
 label {
   monitor =
@@ -125,14 +92,3 @@ label {
     valign = bottom
 }
 
-# label {
-#     monitor =
-#     text = $FPRINTMESSAGE
-#     color = rgba(242, 243, 244, 0.75)
-#     font_size = 16
-#     font_family = SF Pro Display
-#     position = 240, -60
-#     halign = left
-#     valign = center
-# }
-#
