--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -193,6 +193,12 @@ windowrulev2 = idleinhibit always,title:^(.*Hearthstone.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Hearthstone.*)$
 windowrulev2 = tile, title:^(.*Hearthstone.*)$
 
+# Battle.net
+windowrulev2 = noblur,title:^(.*Battle\.net.*)$
+windowrulev2 = idleinhibit always,title:^(.*Battle\.net.*)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Battle\.net.*)$
+windowrulev2 = tile, title:^(.*Battle\.net.*)$
+
 # No idle or dim with discord
 windowrulev2 = idleinhibit always,title:^(.*Murder\sParty.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Murder\sParty.*)$
