--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -1,3 +1,5 @@
+# vim:ft=hyprlang
+
 #
 # Please note not all available settings / options are set here.
 # For a full list, see the wiki
@@ -38,7 +40,6 @@ exec-once=/usr/bin/openrgb --startminimized -p Default
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=/usr/bin/killall qpwgraph || /usr/bin/sleep 5 && /usr/bin/qpwgraph -a -m
 exec-once=/usr/bin/firefox
-#exec-once=/usr/bin/alacritty
 exec-once=/usr/bin/kitty
 exec-once=/usr/bin/hyprpaper
 exec-once=systemctl --user start hyprland-session.target
