--- a/config/hypr/laptop/hyprlock.conf
+++ b/config/hypr/laptop/hyprlock.conf
@@ -1,13 +1,24 @@
+# vim:ft=hyprlang
 
 general {
-    no_fade_in = true
-    no_fade_out = true
-    enable_fingerprint = true
-    fingerprint_ready_message = 
+
+}
+
+animations {
+  bezier = ease, 0.42, 0, 1, 1
+  animation = global, 1, 10, ease
+  animation = fade, 1, 10, ease
+  animation = fadeOut, 1, 1, ease
+}
+
+auth {
+    fingerprint {
+      enabled = true
+    }
 }
 
 background {
-    monitor =
+    monitor = eDP-1
     path = $HOME/backgrounds/framework-exploded.jpg   # only png supported for now
     color = rgba(25, 20, 20, 1.0)
 
@@ -22,7 +33,7 @@ background {
 }
 
 input-field {
-    monitor =
+    monitor = eDP-1
     size = 300, 30
     outline_thickness = 0
     dots_size = 0.25 # Scale of input-field height, 0.2 - 0.8
@@ -38,7 +49,7 @@ input-field {
     check_color = rgba(204, 136, 34, 0)
     fail_color = rgba(204, 34, 34, 0) # if authentication failed, changes outer_color and fail message color
     fail_text = $FAIL <b>($ATTEMPTS)</b> # can be set to empty
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
+    fail_timeout = 300 # transition time in ms between normal outer_color and fail_color
     capslock_color = -1
     numlock_color = -1
     bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
@@ -49,19 +60,8 @@ input-field {
     valign = center
 }
 
-# label {
-#   monitor = 
-#   text = cmd[update:1000] echo "$(~/.config/Scripts/song-status)"
-#   color = rgba(242, 243, 244, 0.75)
-#   font_size = 14
-#   font_family = SF Pro Text
-#   position = 20, 512
-#   halign = left
-#   valign = center
-# }
-
 label {
-  monitor =
+  monitor = eDP-1
   text = cmd[update:1000] echo "$(~/.config/hypr/scripts/network-status)‎"
   color = rgba(242, 243, 244, 0.75)
   font_size = 20
@@ -72,7 +72,7 @@ label {
 }
 
 label {
-  monitor =
+  monitor = eDP-1
   text = cmd[update:1000] echo "$(~/.config/hypr/scripts/battery-status)‎"
   color = rgba(242, 243, 244, 0.75)
   font_size = 20
@@ -82,19 +82,8 @@ label {
   valign = top
 }
 
-# label {
-#   monitor =
-#   text = cmd[update:1000] echo "$(~/.config/Scripts/layout-status)‎"
-#   color = rgba(242, 243, 244, 0.75)
-#   font_size = 15
-#   font_family = SF Pro Text
-#   position = -150, 512
-#   halign = right
-#   valign = center
-# }
-
 label {
-  monitor =
+  monitor = eDP-1
   text = cmd[update:1000] echo "$(date +"%A, %B %d")"
   color = rgba(242, 243, 244, 0.75)
   font_size = 20
@@ -105,7 +94,7 @@ label {
 }
 
 label {
-  monitor = 
+  monitor = eDP-1
   text = cmd[update:1000] echo "$(date +"%k:%M")"
   color = rgba(242, 243, 244, 0.75)
   font_size = 93
@@ -117,7 +106,7 @@ label {
 
 
 label {
-    monitor =
+    monitor = eDP-1
     text = Framework Laptop
     color = rgba(242, 243, 244, 0.75)
     font_size = 20
@@ -128,12 +117,12 @@ label {
 }
 
 label {
-    monitor =
-    text = $FPRINTMESSAGE
+    monitor = eDP-1
+    text = $FPRINTPROMPT
     color = rgba(242, 243, 244, 0.75)
     font_size = 16
     font_family = SF Pro Display
-    position = 240, -60
+    position = 240, -100
     halign = left
     valign = center
 }
