--- a/config/hypr/desktop/hyprlock.conf
+++ b/config/hypr/desktop/hyprlock.conf
@@ -1,7 +1,14 @@
-
+# vim:ft=hyprlang
 general {
-    no_fade_in = true
-    no_fade_out = true
+}
+
+animations {
+  bezier = ease, 0.42, 0, 1, 1
+  animation = global, 1, 10, ease
+  animation = fade, 1, 10, ease
+  animation = fadeIn, 1, 1, ease
+  animation = fadeOut, 1, 1, ease
+  animation = inputFieldDots, 1, 1, ease, popin 50%
 }
 
 background {
@@ -31,15 +38,11 @@ input-field {
     inner_color = rgba(242, 243, 244, 0)
     font_color = rgba(242, 243, 244, 0.75)
     fade_on_empty = false
-    placeholder_text = # Text rendered in the input box when it's empty.
     hide_input = false
     check_color = rgba(204, 136, 34, 0)
     fail_color = rgba(204, 34, 34, 0) # if authentication failed, changes outer_color and fail message color
     fail_text = $FAIL <b>($ATTEMPTS)</b> # can be set to empty
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
     capslock_color = rgba(255, 0, 0, 0)
-    numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
     invert_numlock = false # change color if numlock is off
     swap_font_color = false # see below
     position = 0, 240
