add cron to dotfiles

--- a/default.conf.yaml
+++ b/default.conf.yaml
@@ -11,6 +11,7 @@
 - link:
     ~/.bashrc: bashrc
     ~/.bin: bin
+    /var/spool/cron/gwagner: crontab/gwagner
     ~/.config/:
       glob: true
       path: config/*
