--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -55,6 +55,10 @@ exec-once = xmodmap ~/.Xmodmap
 $mainMod = ALT
 $ctrlMod = CONTROL
 
+debug {
+  disable_logs = false
+}
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -143,12 +147,14 @@ master {
     bind = $mainMod SHIFT, l, layoutmsg, mfact .7
 
 
-    workspace = 1, persistent:true
-    workspace = 2, persistent:true
-    workspace = 3, persistent:true
-    workspace = 4, persistent:true
-    workspace = 5, persistent:true
 }
+
+
+workspace = 1, persistent:true, monitor:DP-4 
+workspace = 2, persistent:true, monitor:DP-4 
+workspace = 3, persistent:true, monitor:DP-4 
+workspace = 4, persistent:true, monitor:DP-4 
+workspace = 5, persistent:true, monitor:DP-4 
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
