--- a/config/hypr/laptop/hyprland.conf
+++ b/config/hypr/laptop/hyprland.conf
@@ -167,6 +167,11 @@ workspace = 3, persistent:true, monitor:eDP-1
 workspace = 4, persistent:true, monitor:eDP-1
 workspace = 5, persistent:true, monitor:eDP-1
 
+# Put windows in the right workspaces
+windowrulev2 = workspace 1,class:firefox
+windowrulev2 = workspace 1,class:ffplay
+windowrulev2 = workspace 2,class:kitty
+
 # Make sure FFPlay does not allow the computer to sleep
 windowrulev2 = noblur,class:^(ffplay)$
 windowrulev2 = idleinhibit always, class:^(ffplay)$
@@ -183,10 +188,13 @@ windowrulev2 = noblur,title:^(.*YouTube.*)$
 windowrulev2 = idleinhibit always,title:^(.*YouTube.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*YouTube.*)$
 
-# Put windows in the right workspaces
-windowrulev2 = workspace 1,class:firefox
-windowrulev2 = workspace 1,class:ffplay
-windowrulev2 = workspace 2,class:kitty
+# Window Rules for obsidian
+windowrulev2 = noblur,class:^(.*obsidian.*)$
+windowrulev2 = opacity 1.0 override 1.0 override, class:^(.*obsidian.*)$
+windowrulev2 = noblur,title:^(.*nvim.*)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*nvim.*)$
+windowrulev2 = workspace 3,class:obsidian
+windowrulev2 = workspace 3,title:nvim
 
 # Float qprompt
 windowrulev2 = workspace 1, class:^(com.cuperino.qprompt)$
