--- a/config/hypr/laptop/hyprland.conf
+++ b/config/hypr/laptop/hyprland.conf
@@ -40,7 +40,7 @@ exec-once=/usr/bin/solaar -w hide
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=/usr/bin/killall qpwgraph || /usr/bin/sleep 5 && /usr/bin/qpwgraph -a -m
 exec-once=/usr/bin/firefox
-exec-once=/usr/bin/kitty
+exec-once=/usr/bin/kitty --title Kitty
 exec-once=/usr/bin/hyprpaper
 
 exec-once=/usr/bin/hypridle
@@ -161,6 +161,7 @@ misc {
     key_press_enables_dpms=false # disabled for testing
 }
 
+# Make sure we always have 5 workspaces
 workspace = 1, persistent:true, monitor:eDP-1
 workspace = 2, persistent:true, monitor:eDP-1
 workspace = 3, persistent:true, monitor:eDP-1
@@ -170,7 +171,7 @@ workspace = 5, persistent:true, monitor:eDP-1
 # Put windows in the right workspaces
 windowrulev2 = workspace 1,class:firefox
 windowrulev2 = workspace 1,class:ffplay
-windowrulev2 = workspace 2,class:kitty
+windowrulev2 = workspace 2, title:Kitty, class:kitty
 
 # Make sure FFPlay does not allow the computer to sleep
 windowrulev2 = noblur,class:^(ffplay)$
@@ -188,13 +189,12 @@ windowrulev2 = noblur,title:^(.*YouTube.*)$
 windowrulev2 = idleinhibit always,title:^(.*YouTube.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*YouTube.*)$
 
-# Window Rules for obsidian
-windowrulev2 = noblur,class:^(.*obsidian.*)$
-windowrulev2 = opacity 1.0 override 1.0 override, class:^(.*obsidian.*)$
-windowrulev2 = noblur,title:^(.*nvim.*)$
-windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*nvim.*)$
-windowrulev2 = workspace 3,class:obsidian
-windowrulev2 = workspace 3,title:nvim
+# Window Rules for bsidian
+windowrulev2 = tag +obsidian, class:^(.*[oO]bsidian.*)$
+windowrulev2 = tag +obsidian, title:^(.*[oO]bsidian.*)$
+windowrulev2 = noblur,tag:obsidian
+windowrulev2 = opacity 1.0 override 1.0 override, tag:obsidian
+windowrulev2 = workspace 3,tag:obsidian
 
 # Float qprompt
 windowrulev2 = workspace 1, class:^(com.cuperino.qprompt)$
@@ -211,7 +211,7 @@ windowrulev2 = opacity 1.0 override 1.0 override, title:^(Picture\-in\-Picture)$
 windowrulev2 = tile,title:^(Picture\-in\-Picture)$
 #
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod, RETURN, exec, kitty --title Kitty
 bind = $mainMod SHIFT, C, killactive
 bind = $mainMod $ctrlMod, Q, exit
 bind = $mainMod SHIFT, V, togglefloating 
