Update hyprland to put obsidian on workspace 3

--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -40,10 +40,10 @@ exec-once=/usr/bin/openrgb --startminimized -p Default
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=/usr/bin/killall qpwgraph || /usr/bin/sleep 5 && /usr/bin/qpwgraph -a -m
 exec-once=/usr/bin/firefox
-exec-once=/usr/bin/kitty
+exec-once=/usr/bin/kitty --title Kitty
 exec-once=/usr/bin/hyprpaper
 exec-once=systemctl --user start hyprland-session.target
-exec-shutdown=systemctl --user stop hyprland-session.target
+#exec-shutdown=systemctl --user stop hyprland-session.target
 
 # Lock screen after idle for 300s and turn monitors off after 330
 exec-once=/usr/bin/hypridle
@@ -173,6 +173,12 @@ misc {
 workspace = 1, layoutopt:orientation:center
 workspace = 2, layoutopt:orientation:center
 
+# Put windows in the right workspaces
+windowrulev2 = workspace 1,class:^(firefox)$
+windowrulev2 = workspace 1,class:^(ffplay)$
+windowrulev2 = workspace 2,class:^(Alacritty)$
+windowrulev2 = workspace 2,title:Kitty, class:^(kitty)$
+
 # Make sure FFPlay does not allow the computer to sleep
 windowrulev2 = noblur,class:^(ffplay)$
 windowrulev2 = idleinhibit always, class:^(ffplay)$
@@ -216,11 +222,6 @@ windowrulev2 = idleinhibit always,title:^(.*Timberborn.*)$
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(.*Timberborn.*)$
 windowrulev2 = tile, title:^(.*Timberborn.*)$
 
-# Put windows in the right workspaces
-windowrulev2 = workspace 1,class:^(firefox)$
-windowrulev2 = workspace 1,class:^(ffplay)$
-windowrulev2 = workspace 2,class:^(Alacritty)$
-windowrulev2 = workspace 2,class:^(Kitty)$
 
 # Float qprompt
 windowrulev2 = workspace 1, class:^(com.cuperino.qprompt)$
@@ -229,6 +230,13 @@ windowrulev2 = move 1600 0, class:^(com.cuperino.qprompt)$
 windowrulev2 = size 1920 20%, class:^(com.cuperino.qprompt)$
 windowrulev2 = nodim, class:^(com.cuperino.qprompt)$
 windowrulev2 = opacity 1.0 override 1.0 override, class:^(com.cuperino.qprompt)$
+
+# Window Rules for obsidian
+windowrulev2 = tag +obsidian, class:^(.*[oO]bsidian.*)$
+windowrulev2 = tag +obsidian, title:^(.*[oO]bsidian.*)$
+windowrulev2 = noblur,tag:obsidian
+windowrulev2 = opacity 1.0 override 1.0 override, tag:obsidian
+windowrulev2 = workspace 3,tag:obsidian
 
 # Firefox PIP
 windowrulev2 = noinitialfocus, title:^(Picture\-in\-Picture)$
@@ -243,7 +251,7 @@ windowrulev2 = opacity 1.0 override 1.0 override, title:^(The Legend Of Zelda)$
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 #bind = $mainMod, RETURN, exec, alacritty
-bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod, RETURN, exec, kitty --title Kitty
 bind = $mainMod SHIFT, C, killactive
 bind = $mainMod $ctrlMod, Q, exit
 bind = $mainMod SHIFT, V, togglefloating 
