--- a/config/hypr/desktop/hypridle.conf
+++ b/config/hypr/desktop/hypridle.conf
@@ -9,7 +9,7 @@ listener {
 
 listener {
     timeout = 330                                 # 5.5min
-    on-timeout = /bin/bash --login -c "hyprctl dispatch dpms off"        # screen off when timeout has passed
-    on-resume = /bin/bash --login -c "hyprctl dispatch dpms on"          # screen on when activity is detected after timeout has fired.
+    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
+    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
 }
 
