--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -257,6 +257,9 @@ bind = $mainMod $ctrlMod, Q, exit
 bind = $mainMod SHIFT, V, togglefloating 
 bind = $mainMod, P, exec, wofi --style ~/.config/wofi/style.css --show drun#combi --modi combi,calc --allow-images
 
+# Bind a printscreen button to take screenshots
+bind = $mainMod, PRINT, exec, hyprshot -m region --clipboard-only 
+
 # Float Firefox Window and Set size
 bind = $mainMod, o, setfloating, active
 bind = $mainMod, o, resizeactive, exact 1920 1080
