--- a/config/systemd/user/capture-loopback.service
+++ b/config/systemd/user/capture-loopback.service
@@ -5,7 +5,8 @@ After=xdg-desktop-portal.service
 
 [Service]
 Type=simple
-ExecStart=gst-launch-1.0 v4l2src device=/dev/v4l/by-id/usb-ASUS_CU4K30_UVC_UHD_Video_902D003090700131-video-index0 ! tee name=vt ! queue ! v4l2sink device=/dev/video10 vt. ! queue ! v4l2sink device=/dev/video11
+#ExecStart=gst-launch-1.0 v4l2src device=/dev/v4l/by-id/usb-ASUS_CU4K30_UVC_UHD_Video_902D003090700131-video-index0 ! tee name=vt ! queue ! v4l2sink device=/dev/video10 vt. ! queue ! v4l2sink device=/dev/video11
+ExecStart=gst-launch-1.0 v4l2src device=/dev/v4l/by-id/usb-ASUS_CU4K30_UVC_UHD_Video_902D003090700131-video-index0 ! video/x-raw,width=1920,height=1080,drm-format=yuyv,framerate=60/1 ! tee name=vt ! queue ! v4l2sink device=/dev/video11 vt.  ! v4l2sink device=/dev/video10
 TimeoutSec=infinity
 Restart=always
 
