try to fix failing lock screen

--- a/config/hypr/desktop/hypridle.conf
+++ b/config/hypr/desktop/hypridle.conf
@@ -1,15 +1,15 @@
+# vim:ft=hyprlang
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
+    lock_cmd = pidof hyprlock || hyprlock                         # avoid starting multiple hyprlock instances.
 }
 
 listener {
-    timeout = 300                                 # 5min
-    on-timeout = hyprlock                         # lock screen when timeout has passed
+    timeout = 300                                                 # 5min
+    on-timeout = hyprlock | /usr/bin/systemd-cat -t hypridle      # lock screen when timeout has passed
 }
 
 listener {
-    timeout = 330                                 # 5.5min
-    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
+    timeout = 330                                                 # 5.5min
+    on-timeout = hyprctl dispatch dpms off                        # screen off when timeout has passed
+    on-resume = hyprctl dispatch dpms on                          # screen on when activity is detected after timeout has fired.
 }
-
