--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -46,7 +46,7 @@ exec-once=systemctl --user start hyprland-session.target
 #exec-shutdown=systemctl --user stop hyprland-session.target
 
 # Lock screen after idle for 300s and turn monitors off after 330
-exec-once=/usr/bin/hypridle
+exec-once=/usr/bin/hypridle | /usr/bin/systemd-cat -t hypridle
 
 # Load xmodmap
 exec-once = xmodmap ~/.Xmodmap
