Fix configs and update tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,6 @@
 # remap prefix from 'C-b' to 'C-a'
+set -g @hostname "#(hostname)"
+
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
@@ -54,6 +56,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin "nordtheme/tmux"
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
 set -g @theme_variation 'night'
+if-shell '[ "$(hostname)" = "framework" ]' "set -g @theme_plugins 'battery,datetime,weather'" 
+
 set -g status-left-length 40
 set -g status-right-length 80
 run '~/.tmux/plugins/tpm/tpm'
