--- a/config/hypr/desktop/hyprland.conf
+++ b/config/hypr/desktop/hyprland.conf
@@ -301,10 +301,16 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Bindings that allow for zooming
+bind = $ctrlMod, mouse_down, exec, \
+  hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor | \
+  awk '/^float/ { print $2 * 1.5 }')
+
+bind = $ctrlMod, mouse_up, exec, \
+  hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor | \
+  awk '/^float/ { new = $2 * 0.5; if (new < 1) new = 1; print new;}')
